# ArchLens

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  docker-compose.ec2.yml  docker-compose.yml  env.example
docs/: actions.md  local.md  (+2 more)
services/processing-service/: .trivyignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  newrelic.ini  pyproject.toml  sonar-project.properties
services/processing-service/src/: environment.py  main.py
services/processing-service/src/application/: sanity_checks.py  validation.py
services/processing-service/src/application/dtos/: __init__.py  process_diagram_result.py  processamento_response.py
services/processing-service/src/application/ports/: __init__.py  analysis_pipeline.py  file_storage.py  image_processor.py  llm_client.py
services/processing-service/src/application/use_cases/: __init__.py  get_processing_result.py  process_diagram.py
services/processing-service/src/domain/: events.py  exceptions.py  schemas.py  value_objects.py
services/processing-service/src/domain/entities/: __init__.py  componente.py  processamento.py  risco.py
services/processing-service/tests/: conftest.py  test_main.py
services/processing-service/tests/integration/: __init__.py  conftest.py  test_ai_pipeline.py
services/processing-service/tests/test_application/: test_sanity_checks.py  test_use_cases.py  test_validation.py
services/processing-service/tests/test_domain/: test_entities.py  test_events.py  test_exceptions.py  test_schemas.py
services/processing-service/tests/test_infrastructure/: test_agents.py  test_image_processor.py  test_llm_client.py  test_messaging.py  test_observability.py  test_s3_client.py
services/processing-service/tests/test_interface/: test_controllers.py  test_gateways.py  test_health_controller.py
services/upload-service/: .trivyignore  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  newrelic.ini  pyproject.toml  sonar-project.properties
services/upload-service/docker/postgres/: entrypoint-wrapper.sh
services/upload-service/src/: environment.py  main.py
services/upload-service/src/domain/: events.py  exceptions.py
services/upload-service/tests/: test_main.py
services/upload-service/tests/test_application/: test_use_cases.py
services/upload-service/tests/test_domain/: test_entities.py  test_events.py  test_value_objects.py
services/upload-service/tests/test_infrastructure/: test_messaging.py  test_observability.py  test_storage.py
services/upload-service/tests/test_interface/: test_controllers.py  test_gateways.py  test_health_controller.py
(+305 files in other folders)
